15910
Typechecker accepts type annotation such as `null: Int`. Regression from 2.8.1 behavior.

Scala 2.9 trunk (r23895)
```scala
scala> def foo: Int = null: Int
foo: Int

scala> foo
java.lang.NullPointerException
   ...

scala> def bar = null: Int
bar: Int

scala> bar
java.lang.NullPointerException
   ...
```

=== What is the expected behavior? ===

2.8.1 final:
```scala
scala> def foo: Int = null: Int
<console>:5: error: type mismatch;
 found   : Null(null)
 required: Int
       def foo: Int = null: Int
                      ^

scala> def bar = null: Int
<console>:5: error: type mismatch;
 found   : Null(null)
 required: Int
       def bar = null: Int
                 ^
```

=== Notes ===

Produces same behavior with scalac, r23895 (verified by malayeri)

=== What versions of the following are you using? ===
  - Scala: 2.9.0.r23982-b20110114020143
  - Java: (OpenJDK 64-Bit Server VM, Java 1.6.0_20)
  - Operating system: Ubuntu 10.10
